--- a/ConsoleMultiprojetos/Apresentacao.csproj
+++ b/ConsoleMultiprojetos/Apresentacao.csproj
@@ -6,8 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Comum\Comum.csproj" />
     <ProjectReference Include="..\Dados\Dados.csproj" />
     <ProjectReference Include="..\Negocios\Negocios.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
